[package]
name = "libburrow"
version = "0.1.0"
authors = ["Josh Lindsey <joshua.s.lindsey@gmail.com>"]
license = "AGPL-3.0+"

[dependencies]
log = "0.3"
curl = "0.4"
tokio-curl = "0.1"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-tls = { version = "0.1.3", features = ["tokio-proto"] }
serde = "1"
serde_derive = "1"
rmp-serde = "0.13"